--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "db:studio": "npx drizzle-kit studio",
-    "db:push": "npx drizzle-kit push:pg",
-    "db:seed": "tsx ./scripts/seed.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
@@ -22,10 +19,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.8",
     "lucide-react": "^0.365.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
     "next": "14.1.4",
-    "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
@@ -36,12 +33,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "drizzle-kit": "^0.20.16",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "tsx": "^4.7.2",
     "typescript": "^5"
   }
 }
