--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
+    "zod-fetch": "^0.1.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
